fix font in z-index

--- a/Css/style.css
+++ b/Css/style.css
@@ -114,7 +114,7 @@ nav {
   background-color: white;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1;
   -webkit-box-shadow: 0px -1px 17px -11px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px -1px 17px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px -1px 17px -11px rgba(0, 0, 0, 0.75);
@@ -307,7 +307,7 @@ nav {
 }
 
 .list_option span {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .list_option .sub-arrow {
